syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order) {}
  rpc GetOrder(GetOrderRequest) returns (Order) {}
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (Order) {}
  rpc GetUserOrders(GetUserOrdersRequest) returns (GetUserOrdersResponse) {}
}

message Order {
  string id = 1;
  string userId = 2;
  repeated OrderItem items = 3;
  string status = 4;
  double total = 5;
  string shippindAddress = 6;
  string paymentId = 7;
  string createAt = 8;
  string updateAt = 9;
}

message OrderItem {
  int32 productId = 1;
  int32 quantity = 2;
  double price = 3;
}

message CreateOrderRequest {
  int32 userId = 1;
  repeated OrderItem items = 2;
  string shippingAddress = 3;
}

message GetOrderRequest {
  string orderId = 1;
}

message UpdateOrderStatusRequest {
  string orderId = 1;
  string status = 2;
}

message GetUserOrdersRequest {
  string userId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetUserOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
}

